# scriptforge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/scriptforge/: cli.py  config.py  db.py  engine.py  models.py  pipeline.py  pov_pipeline.py  researcher.py  vision_reviewer.py
src/scriptforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_character.py  test_cli.py  test_db.py  test_engine.py  test_models.py  test_pipeline.py  test_pov_pipeline.py  test_researcher.py  test_scene_feedback.py  test_templates.py  test_topics.py  test_vision_reviewer.py
