[project]
name = "scriptforge"
version = "0.1.0"
description = "A personal knowledge system for writing better video scripts"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fal-client>=0.5",
    "elevenlabs>=1.0",
    "youtube-transcript-api>=1.0",
]

[project.scripts]
scriptforge = "scriptforge.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
